--- a/modules/swagger-jaxrs/pom.xml
+++ b/modules/swagger-jaxrs/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wordnik</groupId>
   <artifactId>swagger-jaxrs_2.10.0</artifactId>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <version>1.2.5</version>
   <name>swagger-jaxrs</name>
   <build>
@@ -24,6 +24,20 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
+    <plugins>
+      <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <extensions>true</extensions>
+          <configuration>
+              <instructions>
+                  <Export-Package>
+                      com.wordnik.swagger.jaxrs*;version=${project.version}
+                  </Export-Package>
+              </instructions>
+          </configuration>
+      </plugin>
+    </plugins>
   </build>
   <dependencies>
     <dependency>
