--- a/modules/swagger-jersey2-jaxrs/pom.xml
+++ b/modules/swagger-jersey2-jaxrs/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wordnik</groupId>
   <artifactId>swagger-jersey2-jaxrs_2.10.0</artifactId>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <version>1.2.5</version>
   <name>swagger-jersey2-jaxrs (Jersey 2.x support)</name>
   <build>
@@ -24,6 +24,28 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
+    <plugins>
+      <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <extensions>true</extensions>
+          <configuration>
+              <instructions>
+                  <Export-Package>
+                      <!--
+                       We need to expose swagger.jaxrs* separately due to the conflict in the javax.ws artifact IDs
+                       For 1.1.1 -> artifactId=jsr311-api
+                       For 2.0   -> artifactId=javax.ws.rs-api
+                      -->
+                      com.wordnik.swagger.jaxrs;version=${project.version},
+                      com.wordnik.swagger.jaxrs.*;version=${project.version},
+                      com.wordnik.swagger.jersey;version=${project.version},
+                      com.wordnik.swagger.jersey.*;version=${project.version}
+                  </Export-Package>
+              </instructions>
+          </configuration>
+      </plugin>
+    </plugins>
   </build>
   <dependencies>
     <dependency>
@@ -44,14 +66,25 @@
       <groupId>com.wordnik</groupId>
       <artifactId>swagger-jaxrs_2.10.0</artifactId>
       <version>${project.parent.version}</version>
+      <exclusions>
+          <exclusion>
+              <groupId>javax.ws.rs</groupId>
+              <artifactId>jsr311-api</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
-      <dependency>
+    <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>2.0</version>
+    </dependency>
+    <dependency>
         <groupId>org.glassfish.jersey.containers</groupId>
         <artifactId>jersey-container-servlet-core</artifactId>
         <version>${jersey2-version}</version>
         <scope>compile</scope>
-      </dependency>
-      <dependency>
+    </dependency>
+    <dependency>
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-multipart</artifactId>
         <version>${jersey2-version}</version>
