--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,19 @@
 		    </dependency>
 		  </dependencies>
         </plugin>
+          <plugin>
+             <groupId>org.apache.felix</groupId>
+             <artifactId>maven-bundle-plugin</artifactId>
+             <version>2.3.7</version>
+             <extensions>true</extensions>
+             <configuration>
+               <instructions>
+                   <Bundle-Category>swagger</Bundle-Category>
+                   <Bundle-DocURL>https://github.com/wordnik/swagger-core/wiki</Bundle-DocURL>
+                   <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+               </instructions>
+             </configuration>
+          </plugin>
       </plugins>
     </pluginManagement>
   </build>
