--- a/modules/swagger-annotations/pom.xml
+++ b/modules/swagger-annotations/pom.xml
@@ -10,11 +10,25 @@
   <groupId>com.wordnik</groupId>
   <artifactId>swagger-annotations_2.10.0</artifactId>
   <version>1.2.5</version>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <name>swagger-annotations</name>
 
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <defaultGoal>install</defaultGoal>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>maven-bundle-plugin</artifactId>
+            <extensions>true</extensions>
+            <configuration>
+                <instructions>
+                    <Export-Package>
+                        com.wordnik.swagger.annotations;version=${project.version}
+                    </Export-Package>
+                </instructions>
+            </configuration>
+        </plugin>
+      </plugins>
   </build>
 </project>
